# toy-24

./: CMakeLists.txt  calculator.hpp  data.cpp  data.hpp  error.hpp  expression.cpp  imgui.ini  main.cpp  varify.cpp
exes/: imgui.ini
file/: input.txt
src/: expression.hpp  fraction.cpp  fraction.hpp  main.cpp  varify.hpp
